--- a/lightyear_udp/Cargo.toml
+++ b/lightyear_udp/Cargo.toml
@@ -11,6 +11,7 @@ repository = "https://github.com/cBournhonesque/lightyear"
 [features]
 default = []
 server = ["bevy_platform"]
+metrics = ["dep:metrics"]
 
 [dependencies]
 lightyear_core.workspace = true
@@ -18,6 +19,7 @@ lightyear_link.workspace = true
 
 aeronet_io.workspace = true
 
+metrics = {workspace = true, optional = true}
 tracing.workspace = true
 
 # bevy
