--- a/lightyear_ui/Cargo.toml
+++ b/lightyear_ui/Cargo.toml
@@ -1,34 +1,34 @@
 [package]
-name = "lightyear_utils"
+name = "lightyear_ui"
 version = "0.24.2"
 authors.workspace = true
 edition.workspace = true
 rust-version.workspace = true
 license.workspace = true
-description = "Utils shared by lightyear crates"
+description = "Runtime debug UI for lightyear"
 repository = "https://github.com/cBournhonesque/lightyear"
 
 [features]
-default = []
-std = [
-    "bevy_ecs/std",
-    "bevy_platform/std",
-    "bevy_reflect/std"
-]
-metrics = ["dep:metrics", "std"]
+default = ["std"]
+std = []
+test_utils = []
 
 [dependencies]
 # utils
-metrics = { workspace = true, optional = true}
-hashbrown.workspace = true
-paste.workspace = true
-seahash.workspace = true
+metrics.workspace = true
+metrics-util.workspace = true
 tracing.workspace = true
 
 # bevy
+bevy_app.workspace = true
+bevy_color.workspace = true
 bevy_ecs.workspace = true
 bevy_platform.workspace = true
 bevy_reflect.workspace = true
+bevy_ui.workspace = true
+bevy_utils.workspace = true
+bevy_text.workspace = true
+bevy_time.workspace = true
 
 [lints]
 workspace = true
