--- a/lightyear_prediction/Cargo.toml
+++ b/lightyear_prediction/Cargo.toml
@@ -10,7 +10,7 @@ repository = "https://github.com/cBournhonesque/lightyear"
 
 [features]
 default = ["std"]
-std = ["lightyear_replication/std"]
+std = ["lightyear_replication/std", "bevy_math/std"]
 deterministic = []
 server = ["dep:lightyear_messages"]
 metrics = ["dep:metrics", "std"]
