--- a/lightyear_replication/Cargo.toml
+++ b/lightyear_replication/Cargo.toml
@@ -46,6 +46,7 @@ bytes.workspace = true
 
 # bevy
 bevy_app.workspace = true
+bevy_derive.workspace = true
 bevy_ecs.workspace = true
 bevy_platform.workspace = true
 bevy_ptr.workspace = true
