--- a/lightyear_inputs/Cargo.toml
+++ b/lightyear_inputs/Cargo.toml
@@ -53,6 +53,7 @@ bevy_app.workspace = true
 bevy_ecs.workspace = true
 bevy_platform.workspace = true
 bevy_reflect.workspace = true
+bevy_utils.workspace = true
 
 [lints]
 workspace = true
