--- a/lightyear_inputs_bei/Cargo.toml
+++ b/lightyear_inputs_bei/Cargo.toml
@@ -39,6 +39,7 @@ bevy_app.workspace = true
 bevy_ecs.workspace = true
 bevy_platform.workspace = true
 bevy_reflect.workspace = true
+bevy_utils.workspace = true
 
 [dev-dependencies]
 bevy.workspace = true
