--- a/lightyear_link/Cargo.toml
+++ b/lightyear_link/Cargo.toml
@@ -26,6 +26,7 @@ bytes.workspace = true
 bevy_app.workspace = true
 bevy_ecs.workspace = true
 bevy_reflect.workspace = true
+bevy_utils.workspace = true
 
 [lints]
 workspace = true
