--- a/lightyear_utils/Cargo.toml
+++ b/lightyear_utils/Cargo.toml
@@ -29,6 +29,7 @@ tracing.workspace = true
 bevy_ecs.workspace = true
 bevy_platform.workspace = true
 bevy_reflect.workspace = true
+bevy_utils.workspace = true
 
 [lints]
 workspace = true
