fix(replication): Replication was incorrect
The Buffer system did not have access to the CachedReplicate entity
which was causing inconsistent replication.

Simplified the replication logic by only updating CachedReplicate using
observers, and keeping track for each Sender if they replicated an
entity to the remote or not.

--- a/lightyear_replication/Cargo.toml
+++ b/lightyear_replication/Cargo.toml
@@ -34,6 +34,7 @@ lightyear_sync.workspace = true
 
 # utils
 dashmap.workspace = true
+indexmap.workspace = true
 metrics = { workspace = true, optional = true }
 smallvec.workspace = true
 thiserror.workspace = true
