--- a/lightyear_inputs_leafwing/Cargo.toml
+++ b/lightyear_inputs_leafwing/Cargo.toml
@@ -34,6 +34,7 @@ bevy_input.workspace = true
 bevy_math.workspace = true
 bevy_platform.workspace = true
 bevy_reflect.workspace = true
+bevy_utils.workspace = true
 
 [dev-dependencies]
 test-log.workspace = true
