--- a/Cargo.toml
+++ b/Cargo.toml
@@ -184,7 +184,7 @@ approx = "0.5.1"
 
 # Bevy
 # (the full app is used for examples)
-bevy = { version = "0.17.0-rc.1", default-features = false, features = [
+bevy = { version = "0.17", default-features = false, features = [
   "bevy_state",
   "bevy_log",
   "serialize",
@@ -195,26 +195,26 @@ bevy = { version = "0.17.0-rc.1", default-features = false, features = [
   "sysinfo_plugin",
   "zstd_rust"
 ] }
-bevy_app = { version = "0.17.0-rc.1", default-features = false }
-bevy_derive = { version = "0.17.0-rc.1", default-features = false }
-bevy_diagnostic = { version = "0.17.0-rc.1", default-features = false }
-bevy_color = { version = "0.17.0-rc.1", default-features = false }
-bevy_ecs = { version = "0.17.0-rc.1", default-features = false }
-bevy_input = { version = "0.17.0-rc.1", default-features = false }
-bevy_log = { version = "0.17.0-rc.1", default-features = false }
-bevy_math = { version = "0.17.0-rc.1", default-features = false }
-bevy_platform = { version = "0.17.0-rc.1", default-features = false }
-bevy_ptr = { version = "0.17.0-rc.1", default-features = false }
-bevy_reflect = { version = "0.17.0-rc.1", default-features = false }
-bevy_text = { version = "0.17.0-rc.1", default-features = false }
-bevy_time = { version = "0.17.0-rc.1", default-features = false }
-bevy_transform = { version = "0.17.0-rc.1", default-features = false }
-bevy_ui = { version = "0.17.0-rc.1", default-features = false }
-bevy_utils = { version = "0.17.0-rc.1", default-features = false, features = ["debug"] }
+bevy_app = { version = "0.17", default-features = false }
+bevy_derive = { version = "0.17", default-features = false }
+bevy_diagnostic = { version = "0.17", default-features = false }
+bevy_color = { version = "0.17", default-features = false }
+bevy_ecs = { version = "0.17", default-features = false }
+bevy_input = { version = "0.17", default-features = false }
+bevy_log = { version = "0.17", default-features = false }
+bevy_math = { version = "0.17", default-features = false }
+bevy_platform = { version = "0.17", default-features = false }
+bevy_ptr = { version = "0.17", default-features = false }
+bevy_reflect = { version = "0.17", default-features = false }
+bevy_text = { version = "0.17", default-features = false }
+bevy_time = { version = "0.17", default-features = false }
+bevy_transform = { version = "0.17", default-features = false }
+bevy_ui = { version = "0.17", default-features = false }
+bevy_utils = { version = "0.17", default-features = false, features = ["debug"] }
 tracy-client = { version = "=0.18.0" }
 
 # input
-bevy_enhanced_input = { git = "https://github.com/cBournhonesque/bevy_enhanced_input.git", branch = "bevy-0.17", features = ["serialize"] }
+bevy_enhanced_input = { git = "https://github.com/simgine/bevy_enhanced_input.git", branch = "master", features = ["serialize"] }
 leafwing-input-manager = { version = "0.18", default-features = false, features = [
   "keyboard",
 ] }
@@ -224,13 +224,13 @@ avian2d = { git = "https://github.com/Jondolf/avian.git",  branch = "main", defa
 avian3d = { git = "https://github.com/Jondolf/avian.git", branch = "main", default-features = false }
 
 # gui debug ui
-bevy-inspector-egui = { git = "https://github.com/pindash-io/bevy-inspector-egui.git", branch = "bevy-0.17", default-features = false, features = [
+bevy-inspector-egui = { version = "0.34", default-features = false, features = [
   "bevy_pbr",
   "bevy_image",
   "bevy_render",
   "egui_open_url",
 ] }
-bevy_egui = { git = "https://github.com/pindash-io/bevy_egui.git", branch = "bevy-0.17", default-features = false, features = [
+bevy_egui = { version = "0.37", default-features = false, features = [
   "open_url",
   "default_fonts",
   "render",
