feat: avian replicate Position but correct/interpolate Transform
- Add custom correction systems for avian that insert
  VisualCorrection<Position> post-rollback even if the rollback is done
  on Position/Rotation

- To avoid issues where we insert a RigidBody on the Predicted entity which inserts Position::default() by required components even though we just inserted Confirmed<Position> on the entity, we instead insert BOTH Confirmed<C> and C on a predicted entity

--- a/demos/spaceships/Cargo.toml
+++ b/demos/spaceships/Cargo.toml
@@ -11,7 +11,7 @@ publish = false
 [features]
 default = ["client", "gui", "server", "netcode", "udp"]
 client = ["gui", "lightyear/client", "lightyear_examples_common/client"]
-gui = ["lightyear_examples_common/gui"]
+gui = ["lightyear_examples_common/gui", "bevy/bevy_post_process"]
 server = ["lightyear/server", "lightyear_examples_common/server"]
 netcode = ["lightyear_examples_common/netcode"]
 udp = [
@@ -32,7 +32,6 @@ lightyear = { workspace = true, features = [
 lightyear_frame_interpolation.workspace = true
 lightyear_examples_common.workspace = true
 leafwing-input-manager = { workspace = true, features = ["keyboard", "mouse"] }
-
 avian2d = { workspace = true, features = [
   "2d",
   "f32",
