--- a/lightyear_replication/Cargo.toml
+++ b/lightyear_replication/Cargo.toml
@@ -49,6 +49,7 @@ bytes.workspace = true
 bevy_app.workspace = true
 bevy_derive.workspace = true
 bevy_ecs.workspace = true
+bevy_math.workspace = true
 bevy_platform.workspace = true
 bevy_ptr.workspace = true
 bevy_reflect.workspace = true
