--- a/lightyear_avian3d/Cargo.toml
+++ b/lightyear_avian3d/Cargo.toml
@@ -43,6 +43,7 @@ avian3d.workspace = true
 bevy_app.workspace = true
 bevy_ecs.workspace = true
 bevy_math.workspace = true
+bevy_time.workspace = true
 bevy_transform = { workspace = true, features = ["bevy-support", "libm"] }
 bevy_utils.workspace = true
 
