--- a/lightyear_replication/Cargo.toml
+++ b/lightyear_replication/Cargo.toml
@@ -13,8 +13,8 @@ default = ["std"]
 std = ["lightyear_transport/std"]
 client = []
 server = ["lightyear_connection/server"]
-prediction = ["lightyear_core/prediction"]
-interpolation = ["lightyear_core/interpolation"]
+prediction = []
+interpolation = []
 deterministic = []
 trace = []
 metrics = ["dep:metrics", "std", "lightyear_utils/metrics"]
