--- a/lightyear_inputs_native/Cargo.toml
+++ b/lightyear_inputs_native/Cargo.toml
@@ -30,6 +30,9 @@ bevy_derive.workspace = true
 bevy_ecs.workspace = true
 bevy_reflect.workspace = true
 
+[dev-dependencies]
+test-log.workspace = true
+
 [lints]
 workspace = true
 
