--- a/examples/bevy_enhanced_inputs/Cargo.toml
+++ b/examples/bevy_enhanced_inputs/Cargo.toml
@@ -26,6 +26,7 @@ server = [
   "lightyear_examples_common/server"
 ]
 netcode = [
+  "lightyear_examples_common/debug",
   "lightyear_examples_common/netcode"
 ]
 udp = [
