feat: Add Raw connection layer where the IO acts as a connection

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ members = [
   "lightyear_messages",
   "lightyear_netcode",
   "lightyear_prediction",
+  "lightyear_raw_connection",
   "lightyear_replication",
   "lightyear_serde",
   "lightyear_steam",
@@ -90,6 +91,7 @@ lightyear = { path = "lightyear", version = "0.25.3", default-features = false }
 lightyear_transport = { path = "lightyear_transport", version = "0.25.3", default-features = false }
 lightyear_prediction = { path = "./lightyear_prediction", version = "0.25.3", default-features = false }
 lightyear_link = { path = "./lightyear_link", version = "0.25.3", default-features = false }
+lightyear_raw_connection = { path = "./lightyear_raw_connection", version = "0.25.3", default-features = false }
 lightyear_replication = { path = "./lightyear_replication", version = "0.25.3", default-features = false }
 lightyear_serde = { path = "./lightyear_serde", version = "0.25.3", default-features = false }
 lightyear_steam = { path = "./lightyear_steam", version = "0.25.3", default-features = false }
