--- a/lightyear_tests/Cargo.toml
+++ b/lightyear_tests/Cargo.toml
@@ -43,6 +43,7 @@ lightyear = { workspace = true, features = [
     "leafwing",
     "interpolation",
     "prediction",
+    "raw_connection",
     "replication",
     "steam",
 ] }
@@ -52,6 +53,10 @@ lightyear_transport = { workspace = true, features = ["client", "server"] }
 lightyear_core.workspace = true
 lightyear_netcode = { workspace = true, features = ["client", "server"] }
 lightyear_messages = { workspace = true, features = ["client", "server"] }
+lightyear_raw_connection = { workspace = true, features = [
+    "client",
+    "server",
+] }
 lightyear_replication = { workspace = true, features = [
     "client",
     "server",
