--- a/examples/common/Cargo.toml
+++ b/examples/common/Cargo.toml
@@ -66,7 +66,11 @@ async-compat.workspace = true
 cfg-if.workspace = true
 clap.workspace = true
 serde.workspace = true
-bevy = { workspace = true, features = ["bevy_state", "bevy_log", "reflect_auto_register"] }
+bevy = { workspace = true, features = [
+  "bevy_state",
+  "bevy_log",
+  "reflect_auto_register",
+] }
 bevy-inspector-egui = { workspace = true, optional = true }
 bevy_egui = { workspace = true, optional = true }
 tracing.workspace = true
