--- a/examples/lobby/Cargo.toml
+++ b/examples/lobby/Cargo.toml
@@ -21,21 +21,10 @@ client = [
   "lightyear/server",
   "lightyear_examples_common/server",
 ]
-gui = [
-  "lightyear_examples_common/gui"
-]
-server = [
-  "lightyear/server",
-  "lightyear_examples_common/server"
-]
-netcode = [
-  "lightyear_examples_common/netcode"
-]
-udp = [
-  "lightyear_examples_common/udp",
-  "lightyear/std",
-  "lightyear/udp",
-]
+gui = ["lightyear_examples_common/gui"]
+server = ["lightyear/server", "lightyear_examples_common/server"]
+netcode = ["lightyear_examples_common/netcode"]
+udp = ["lightyear_examples_common/udp", "lightyear/std", "lightyear/udp"]
 
 [dependencies]
 lightyear = { workspace = true, features = [
