--- a/examples/avian_physics/Cargo.toml
+++ b/examples/avian_physics/Cargo.toml
@@ -11,7 +11,7 @@ client = ["lightyear_examples_common/client", "gui"]
 gui = ["lightyear_examples_common/gui"]
 server = ["lightyear_examples_common/server"]
 netcode = ["lightyear_examples_common/netcode"]
-udp = ["lightyear_examples_common/udp", ]
+udp = ["lightyear_examples_common/udp"]
 
 [dependencies]
 lightyear = { workspace = true, features = [
