--- a/lightyear_aeronet/Cargo.toml
+++ b/lightyear_aeronet/Cargo.toml
@@ -11,9 +11,7 @@ repository = "https://github.com/cBournhonesque/lightyear"
 [features]
 default = ["std"]
 std = ["lightyear_link/std"]
-test_utils = [
-    "lightyear_core/test_utils"
-]
+test_utils = ["lightyear_core/test_utils"]
 
 [dependencies]
 lightyear_core.workspace = true
